ikiwiki (2.62) UNRELEASED; urgency=low

  * Avoid using cp -a (again). (HenrikBrixAndersen)

 -- Joey Hess <joeyh@debian.org>  Thu, 21 Aug 2008 16:20:58 -0400

ikiwiki (2.61) unstable; urgency=low

  * poll: Fix typo that broke plugin.
  * graphviz: Fix breakage of the name of the preprocessor directive.

 -- Joey Hess <joeyh@debian.org>  Thu, 14 Aug 2008 18:13:22 -0400

ikiwiki (2.60) unstable; urgency=low
 
  [ Joey Hess ]
  * Starting with this version, "ikiwiki -setup /etc/ikiwiki/auto.setup"
    can be used create a new wiki in seconds.
  * websetup: New plugin providing a setup form on the web.
  * ikiwiki --dumpsetup can generate a nice setup file snapshotting ikiwiki's
    current configuration.
  * The way wrappers are defined in the setup file has changed. Old setup
    files will continue to work, for now.
  * ikiwiki-transition setupformat can be used to convert a setup file to the
    new format.
  * Version control backends promoted to first-class plugins.
  * ikiwiki-update-wikilist: Add -r switch to remove. Default behavior is now
    always to add.
  * Start moving admin preferences from the web interface to the setup file.
  * Add getsetup hook, all plugins should use it to record information about
    themselves and any fields they add to %config
  * Large amounts of internal config data reorg.
  * ikiwiki-makerepo: Bail if both srcdir and repository are not specified.
    Closes: #493628
  * Clarify some wording in the setup documentation that could maybe lead
    users to putting paths with "~/" in the setup file, which doesn't work.
    Closes: #493835
  * autoindex: Ignore internal pages, and take underlay directories into
    account. Also, avoid making index pages for directories that contain
    no files.
  * external: Fix support for hooks called in an array context.
  * Options set in the setup file are now immediatly loaded by ikiwiki -setup.
    This allows later switches to override them. Previously, setup file