@@ -1,6 +1,7 @@
 ikiwiki (2.62) UNRELEASED; urgency=low
 
   * Avoid using cp -a (again). (HenrikBrixAndersen)
+  * Add missing PREFIX to a few lines of the Makefile. (Thomas Keller)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 21 Aug 2008 16:20:58 -0400
 
